# turbo-dubstep

./: .gitignore  CMakeLists.txt
include/: factory_map.hpp  math.hpp  matrix.h  sound_provider.hpp
include/controller/: engine.hpp  input_event_handler.hpp  logic.hpp
include/flappy_box/controller/: flappy_engine.hpp  game_over_logic.hpp  paddle_logic.hpp  world_logic.hpp
include/flappy_box/model/: box.hpp  gameOver.hpp  game_over.hpp  paddle.hpp  world.hpp
include/flappy_box/view/: box_al_audible.hpp  box_gl_drawable.hpp  game_over_gl_drawable.hpp  paddle_gl_drawable.hpp  world_gl_drawable.hpp
include/model/: game.hpp  game_object.hpp
include/view/: glut_window.hpp
msvc2013/ex5/: README.txt  ex5.sln  ex5.vcxproj  ex5.vcxproj.filters  extlibs.props  packages.config
res/: thehead.raw
src/: sound_provider.cpp
src/controller/: engine.cpp  glut_engine.cpp  logic.cpp
src/flappy_box/controller/: box_object_logic.cpp  flappy_engine.cpp  game_over_logic.cpp  paddle_logic.cpp  world_logic.cpp
src/flappy_box/model/: box.cpp  gameOver.cpp  game_over.cpp  paddle.cpp  world.cpp
src/flappy_box/view/: box_al_audible.cpp  box_gl_drawable.cpp  game_over_gl_drawable.cpp  paddle_gl_drawable.cpp  world_gl_drawable.cpp
src/model/: game.cpp  game_object.cpp
src/view/: al_renderer.cpp  gl_renderer.cpp  glut_window.cpp
